--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "dependencies": {
     "axios": "^1.7.9",
-    "dotenv": "^10.x.x",
+    "dotenv": "^10.0.0",
     "express": "^4.21.2",
     "shopgun-sdk": "^4.x.x"
   },
