--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^1.7.9",
     "dotenv": "^10.0.0",
     "express": "^4.21.2",
+    "firebase": "^11.2.0",
     "shopgun-sdk": "^4.x.x"
   },
   "devDependencies": {
