--- a/package.json
+++ b/package.json
@@ -10,9 +10,7 @@
   "dependencies": {
     "axios": "^1.7.9",
     "dotenv": "^10.0.0",
-    "express": "^4.21.2",
-    "firebase": "^11.2.0",
-    "shopgun-sdk": "^4.x.x"
+    "firebase": "^11.2.0"
   },
   "devDependencies": {
     "nodemon": "^2.x.x"
