--- a/.github/workflows/scheduled-job.yml
+++ b/.github/workflows/scheduled-job.yml
@@ -19,6 +19,19 @@ jobs:
 
       - name: Install dependencies
         run: npm install
-
+    
+      - name: Set up environment variables
+        run: |
+            echo "API_KEY=${{ secrets.API_KEY }}" >> $GITHUB_ENV
+            echo "TRACK_ID=${{ secrets.TRACK_ID }}" >> $GITHUB_ENV
+            echo "BUSINESS_IDS=${{ secrets.BUSINESS_IDS }}" >> $GITHUB_ENV
+            echo "FIREBASE_API_KEY=${{ secrets.FIREBASE_API_KEY }}" >> $GITHUB_ENV
+            echo "FIREBASE_AUTH_DOMAIN=${{ secrets.FIREBASE_AUTH_DOMAIN }}" >> $GITHUB_ENV
+            echo "FIREBASE_DATABASE_URL=${{ secrets.FIREBASE_DATABASE_URL }}" >> $GITHUB_ENV
+            echo "FIREBASE_PROJECT_ID=${{ secrets.FIREBASE_PROJECT_ID }}" >>  $GITHUB_ENV
+            echo "FIREBASE_STORAGE_BUCKET=${{ secrets.FIREBASE_STORAGE_BUCKET }}" >>  $GITHUB_ENV
+            echo "FIREBASE_MESSAGING_SENDER_ID=${{ secrets.FIREBASE_MESSAGING_SENDER_ID }}" >>  $GITHUB_ENV
+            echo "FIREBASE_APP_ID=${{ secrets.FIREBASE_APP_ID }}" >>  $GITHUB_ENV
+            echo "FIREBASE_MEASUREMENT_ID=${{ secrets.FIREBASE_MEASUREMENT_ID }}" >>  $GITHUB_ENV
       - name: Run script
         run: npm start
