--- a/.github/workflows/scheduled-job.yml
+++ b/.github/workflows/scheduled-job.yml
@@ -4,10 +4,23 @@ on:
   schedule:
     - cron: '0 2 * * 0,1,5'  # Runs at 02:00 UTC on Sunday, Monday, and Friday
   workflow_dispatch:  # Allows manual triggering
-
+  
 jobs:
   run-script:
     runs-on: ubuntu-latest
+    env:
+      API_KEY: ${{ vars.API_KEY }}
+      TRACK_ID: ${{ vars.TRACK_ID }}
+      BUSINESS_IDS: ${{ vars.BUSINESS_IDS }}
+      FIREBASE_API_KEY: ${{ vars.FIREBASE_API_KEY }}
+      FIREBASE_AUTH_DOMAIN: ${{ vars.FIREBASE_AUTH_DOMAIN }}
+      FIREBASE_DATABASE_URL: ${{ vars.FIREBASE_DATABASE_URL }}
+      FIREBASE_PROJECT_ID: ${{ vars.FIREBASE_PROJECT_ID }}
+      FIREBASE_STORAGE_BUCKET: ${{ vars.FIREBASE_STORAGE_BUCKET }}
+      FIREBASE_MESSAGING_SENDER_ID: ${{ vars.FIREBASE_MESSAGING_SENDER_ID }}
+      FIREBASE_APP_ID: ${{ vars.FIREBASE_APP_ID }}
+      FIREBASE_MEASUREMENT_ID: ${{ vars.FIREBASE_MEASUREMENT_ID }}
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
@@ -18,14 +31,7 @@ jobs:
           node-version: 18
 
       - name: Install dependencies
-        run: npm ci
-
-      - name: Set up environment variables
-        run: |
-          echo "API_KEY=${{ secrets.API_KEY }}" >> $GITHUB_ENV
-          echo "TRACK_ID=${{ secrets.TRACK_ID }}" >> $GITHUB_ENV
-          echo "BUSINESS_IDS=$(echo "${{ secrets.BUSINESS_IDS }}" | sed 's/,/;/g')" >> $GITHUB_ENV
-          echo "FIREBASE_DATABASE_URL=${{ secrets.FIREBASE_DATABASE_URL }}" >> $GITHUB_ENV
+        run: npm install
 
       - name: Debug Environment Variables
         run: |
@@ -33,7 +39,6 @@ jobs:
           echo "TRACK_ID=${TRACK_ID}"
           echo "BUSINESS_IDS=${BUSINESS_IDS}"
           echo "FIREBASE_DATABASE_URL=${FIREBASE_DATABASE_URL}"
-        shell: bash
 
       - name: Run script
         run: npm start
