--- a/.github/workflows/scheduled-job.yml
+++ b/.github/workflows/scheduled-job.yml
@@ -5,10 +5,27 @@ on:
     - cron: '0 2 * * 0,1,5'  # Runs at 02:00 UTC on Sunday, Monday, and Friday
   workflow_dispatch:  # Allows manual triggering
 
+env:
+  GLOBAL_VAR: "This is a global variable"
+
 jobs:
   run-script:
     runs-on: ubuntu-latest
     environment: DKSD secret keys
+    env:
+      JOB_VAR: "This is a job-level variable"
+      API_KEY: ${{ secrets.API_KEY }}
+      TRACK_ID: ${{ secrets.TRACK_ID }}
+      BUSINESS_IDS: ${{ secrets.BUSINESS_IDS }}
+      FIREBASE_API_KEY: ${{ secrets.FIREBASE_API_KEY }}
+      FIREBASE_AUTH_DOMAIN: ${{ secrets.FIREBASE_AUTH_DOMAIN }}
+      FIREBASE_DATABASE_URL: ${{ secrets.FIREBASE_DATABASE_URL }}
+      FIREBASE_PROJECT_ID: ${{ secrets.FIREBASE_PROJECT_ID }}
+      FIREBASE_STORAGE_BUCKET: ${{ secrets.FIREBASE_STORAGE_BUCKET }}
+      FIREBASE_MESSAGING_SENDER_ID: ${{ secrets.FIREBASE_MESSAGING_SENDER_ID }}
+      FIREBASE_APP_ID: ${{ secrets.FIREBASE_APP_ID }}
+      FIREBASE_MEASUREMENT_ID: ${{ secrets.FIREBASE_MEASUREMENT_ID }}
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
@@ -23,10 +40,12 @@ jobs:
 
       - name: Debug Environment Variables
         run: |
-          echo "API_KEY=${{ secrets.API_KEY }}"
-          echo "TRACK_ID=${{ secrets.TRACK_ID }}"
-          echo "BUSINESS_IDS=${{ secrets.BUSINESS_IDS }}"
-          echo "FIREBASE_DATABASE_URL=${{ secrets.FIREBASE_DATABASE_URL }}"
+          echo "GLOBAL_VAR=${{ env.GLOBAL_VAR }}"
+          echo "JOB_VAR=${{ env.JOB_VAR }}"
+          echo "API_KEY=${{ env.API_KEY }}"
+          echo "TRACK_ID=${{ env.TRACK_ID }}"
+          echo "BUSINESS_IDS=${{ env.BUSINESS_IDS }}"
+          echo "FIREBASE_DATABASE_URL=${{ env.FIREBASE_DATABASE_URL }}"
 
       - name: Run script
         run: npm start
