--- a/.github/workflows/scheduled-job.yml
+++ b/.github/workflows/scheduled-job.yml
@@ -2,8 +2,8 @@ name: Run JavaScript script
 
 on:
   schedule:
-    - cron: '0 2 * * 0,1,5'
-  workflow_dispatch:
+    - cron: '0 2 * * 0,1,5'  # Runs at 02:00 UTC on Sunday, Monday, and Friday
+  workflow_dispatch:  # Allows manual triggering
 
 env:
   GLOBAL_VAR: "This is a global variable"
@@ -38,11 +38,14 @@ jobs:
       - name: Install dependencies
         run: npm install
 
-      - name: Run script to generate offers.json
-        run: npm start
+      - name: Debug Environment Variables
+        run: |
+          echo "GLOBAL_VAR=${{ env.GLOBAL_VAR }}"
+          echo "JOB_VAR=${{ env.JOB_VAR }}"
+          echo "API_KEY=${{ env.API_KEY }}"
+          echo "TRACK_ID=${{ env.TRACK_ID }}"
+          echo "BUSINESS_IDS=${{ env.BUSINESS_IDS }}"
+          echo "FIREBASE_DATABASE_URL=${{ env.FIREBASE_DATABASE_URL }}"
 
-      - name: Debug - List files in data directory
-        run: ls -alh src/data
-
-      - name: Upload to Firebase
-        run: node -e "require('./src/controllers/catalogController').uploadToFirebase('offers.json', 'firebase-path')"
+      - name: Run uploadToDB script
+        run: node src/uploadToDB.js
