--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "A project to print out catalogs and fetch offers from Danish supermarket catalogs.",
   "main": "src/index.js",
   "scripts": {
-    "start": "node -e \"(async () => { const CatalogController = require('./src/controllers/catalogController'); const controller = new CatalogController(); await controller.getCatalogIds(); })();\"",
-    "dev": "nodemon src/index.js"
+     "start": "node src/uploadToDB.js",
+     "dev": "nodemon src/index.js"
   },
   "dependencies": {
     "axios": "^1.7.9",
