--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "description": "A project to print out catalogs and fetch offers from Danish supermarket catalogs.",
   "main": "src/index.js",
   "scripts": {
-     "start": "node src/uploadToDB.js",
-     "dev": "nodemon src/index.js"
+    "start": "node src/uploadToDB.js",
+    "dev": "nodemon src/index.js"
   },
   "dependencies": {
     "axios": "^1.7.9",
     "dotenv": "^10.0.0",
-    "firebase": "^11.2.0"
+    "firebase": "^11.2.0",
+    "firebase-admin": "^13.1.0"
   },
   "devDependencies": {
     "nodemon": "^2.x.x"
